@@ -1,0 +1,249 @@
+<html>
+<head>
+<title>FVWM Manpage - fvwm-config</title>
+</head>
+  <body BACKGROUND="../../black-stone1.jpg"
+    bgcolor="#000000" text="#ffffff"
+    link="#FFFF88" vlink="#EEDDDD" alink="#ff0000">
+<center>
+<h1><font color="pink">FVWM Manpage - fvwm-config</font></h1>
+</center>
+<pre>
+
+</pre>
+	<style><!--
+	# All these may be commented out
+	#H1, H2 { margin-left: -0; }
+	#BLACKQUOTE { margin-left: +48; }
+	#P { margin-left: +24; }
+	B { color: #FFFFD0; }
+	I { color: #D0FFFF; }
+	--></style>
+    
+<HTML><HEAD><TITLE>Manpage of FVWM-CONFIG</TITLE>
+</HEAD><BODY>
+<H1>FVWM-CONFIG</H1>
+Section: User Commands  (1)<BR>Updated: 8 July 2001<BR><A HREF="#index">Index</A>
+- <A HREF="./">Return to Main Contents</A><HR>
+
+
+<A NAME="lbAB">&nbsp;</A>
+<H2>NAME</H2>
+
+fvwm-config - query an existing FVWM installation
+<A NAME="lbAC">&nbsp;</A>
+<H2>SYNOPSIS</H2>
+
+<B>fvwm-config</B>
+[<I>--help</I>]
+[<I>--version</I>]
+[<I>--info</I>]
+[<I>--prefix</I>]
+[<I>--exec-prefix</I>]
+[<I>--bindir</I>]
+[<I>--datadir</I>]
+[<I>--libexecdir</I>]
+[<I>--sysconfdir</I>]
+[<I>--mandir</I>]
+[<I>--fvwm-moduledir</I>]
+[<I>--fvwm-datadir</I>]
+[<I>--default-imagepath</I>]
+[<I>--default-userdir</I>]
+[<I>--fvwm-exe</I>]
+[<I>--supports</I>]
+[<I>--supports-&lt;feature&gt;</I>]
+<A NAME="lbAD">&nbsp;</A>
+<H2>DESCRIPTION</H2>
+
+<B>fvwm-config</B>
+
+is a shell script that provides an information about the FVWM version,
+installation directories, built-in paths and supported features.
+<A NAME="lbAE">&nbsp;</A>
+<H2>OPTIONS</H2>
+
+<B>fvwm-config</B>
+
+prints to the standard output in all options.
+Both short and long GNU-like option names may be used.
+<DL COMPACT>
+<DT><B>-h --help</B>
+
+<DD>
+prints the short usage
+<DT><B>-v --version</B>
+
+<DD>
+prints the version
+<DT><B>-i --info</B>
+
+<DD>
+prints the full info page
+<DT><B>-P --prefix</B>
+
+<DD>
+prints the installation prefix
+<DT><B>-E --exec-prefix</B>
+
+<DD>
+prints the installation exec-prefix
+<DT><B>-B --bindir</B>
+
+<DD>
+prints the installation bindir
+<DT><B>-D --datadir</B>
+
+<DD>
+prints the installation datadir
+<DT><B>-L --libexecdir</B>
+
+<DD>
+prints the installation libexecdir
+<DT><B>-S --sysconfdir</B>
+
+<DD>
+prints the installation sysconfdir
+<DT><B>-M --mandir</B>
+
+<DD>
+prints the installation mandir
+<DT><B>-m --fvwm-moduledir</B>
+
+<DD>
+prints FVWM_MODULEDIR, where the modules are installed
+<DT><B>-d --fvwm-datadir</B>
+
+<DD>
+prints FVWM_DATADIR, where the system wide configs are installed
+<DT><B>-I --default-imagepath</B>
+
+<DD>
+prints the built-in ImagePath
+<DT><B>-U --default-userdir</B>
+
+<DD>
+prints the default FVWM_USERDIR, note: $HOME is not expanded
+<DT><B>-e --fvwm-exe</B>
+
+<DD>
+prints the fvwm executable name (in bindir)
+<DT><B>-s --supports</B>
+
+<DD>
+lists all supported features, one per line
+<DT><B>--supports-</B><I>&lt;feature&gt;</I>
+
+<DD>
+prints nothing, returns: 0 if the
+<I>&lt;feature&gt;</I>
+
+is supported, 100 if not, 200 if unknown.
+All or supported feature names may be found using
+<I>--info</I> or <I>--supports</I>.
+
+</DL>
+<A NAME="lbAF">&nbsp;</A>
+<H2>USAGE</H2>
+
+Here are some real life usages.
+<P>
+FvwmScript-Setup95 checks for the gnome-wm support:
+
+
+<P>
+
+
+<blockquote><PRE>if fvwm-config --supports-gnome-wm; then echo 1; else echo 0; fi</PRE></blockquote>
+<P>
+
+
+
+<P>
+<I>fvwm-themes</I>
+
+package checks for the correct
+<I>fvwm</I>
+
+version installed using:
+
+
+<P>
+
+
+<blockquote><PRE>fvwm-config --version</PRE></blockquote>
+<P>
+
+
+
+and tries to use the same installation directories:
+
+
+<P>
+
+
+<blockquote><PRE>fvwm-config --bindir --mandir --fvwm-datadir</PRE></blockquote>
+<P>
+
+
+
+<P>
+A way to find the full path to the fvwm executable:
+
+
+<P>
+
+
+<blockquote><PRE>echo `fvwm-config --bindir`/`fvwm-config --fvwm-exe`</PRE></blockquote>
+<P>
+
+
+
+<P>
+For a more human readable output, try:
+
+
+<P>
+
+
+<blockquote><PRE>fvwm-config --info</PRE></blockquote>
+<P>
+
+
+
+<A NAME="lbAG">&nbsp;</A>
+<H2>COPYING</H2>
+
+<B>fvwm-config</B>
+
+is a part of fvwm package and distributed by the same terms, see GNU GPL.
+<A NAME="lbAH">&nbsp;</A>
+<H2>AUTHOR</H2>
+
+Mikhael Goikhman &lt;<A HREF="mailto:migo@homemail.com">migo@homemail.com</A>&gt;
+<P>
+
+<HR>
+<A NAME="index">&nbsp;</A><H2>Index</H2>
+<DL>
+<DT><A HREF="#lbAB">NAME</A><DD>
+<DT><A HREF="#lbAC">SYNOPSIS</A><DD>
+<DT><A HREF="#lbAD">DESCRIPTION</A><DD>
+<DT><A HREF="#lbAE">OPTIONS</A><DD>
+<DT><A HREF="#lbAF">USAGE</A><DD>
+<DT><A HREF="#lbAG">COPYING</A><DD>
+<DT><A HREF="#lbAH">AUTHOR</A><DD>
+</DL>
+<HR>
+This document was created by
+<A HREF="./">man2html</A>,
+using the manual pages.<BR>
+Time: 00:28:30 GMT, July 10, 2001
+</BODY>
+</HTML>
+</pre>
+<hr>
+<!-- This file automatically generated by run_man2html.sh
+on Tue Jul 10 03:28:30 IDT 2001 -->
+</body>
+</html>
+
