@@ -13,7 +13,7 @@
 </pre>
 <!-- Generic header logic turned on "pre" had to turn it off -->
 <hr>
-These pages were last generated on Thu Jul 5 00:46:43 IDT 2001 by migo,
+These pages were last generated on Tue Jul 10 03:28:22 IDT 2001 by migo,
 from the man pages in directory ../../fvwm.
 
 <hr><font color="cyan">Start of man pages in section 1.
@@ -51,6 +51,7 @@ from the man pages in directory ../../fvwm.
 <li><a href="FvwmWinList.html">FvwmWinList(1)</a>
 <li><a href="fvwm24_convert.html">fvwm24_convert(1)</a>
 <li><a href="fvwmbug.html">fvwmbug(1)</a>
+<li><a href="fvwm-config.html">fvwm-config(1)</a>
 <li><a href="fvwm-menu-desktop.html">fvwm-menu-desktop(1)</a>
 <li><a href="fvwm-menu-directory.html">fvwm-menu-directory(1)</a>
 <li><a href="fvwm-menu-headlines.html">fvwm-menu-headlines(1)</a>
@@ -61,7 +62,7 @@ from the man pages in directory ../../fvwm.
 </pre>
 <hr>
 <!-- This file automatically generated by run_man2html.sh
-on Thu Jul  5 00:46:52 IDT 2001 -->
+on Tue Jul 10 03:28:31 IDT 2001 -->
 </body>
 </html>
 
