@@ -1,3 +1,9 @@
+2001-07-10  Mikhael Goikhman  <migo@homemail.com>
+
+	* generated/manpages/index.html:
+	* generated/manpages/fvwm-config.html:
+	added the man page of fvwm-config
+
 2001-07-04  Mikhael Goikhman  <migo@homemail.com>
 
 	* generated/manpages/index.html:
